# SPEI

./: .gitignore  copernicus_download_script.ipynb  download.ipynb  main.ipynb  pyproject.toml  validation.ipynb
ESGF/: enums.py  utils.py
data/4f947ed36a3b71364b068918160ae076/: provenance.json
data/pr/: wget-20241222212617.sh
data/tas/: wget-20241222221111.sh
spei/: __init__.py  spei.py
wget_scripts/AFR-44/historical/pr/: AFR-44_historical_pr.sh
wget_scripts/AFR-44/historical/tas/: AFR-44_historical_tas.sh
wget_scripts/AFR-44/rcp26/pr/: AFR-44_rcp26_pr.sh
wget_scripts/AFR-44/rcp26/tas/: AFR-44_rcp26_tas.sh
wget_scripts/AFR-44/rcp85/pr/: AFR-44_rcp85_pr.sh
wget_scripts/AFR-44/rcp85/tas/: AFR-44_rcp85_tas.sh
wget_scripts/EAS-22/historical/pr/: EAS-22_historical_pr.sh
wget_scripts/EAS-22/historical/tas/: EAS-22_historical_tas.sh
wget_scripts/EAS-22/rcp26/pr/: EAS-22_rcp26_pr.sh
wget_scripts/EAS-22/rcp26/tas/: EAS-22_rcp26_tas.sh
wget_scripts/EAS-22/rcp85/pr/: EAS-22_rcp85_pr.sh
wget_scripts/EAS-22/rcp85/tas/: EAS-22_rcp85_tas.sh
wget_scripts/EUR-11/historical/pr/: EUR-11_historical_pr.sh
wget_scripts/EUR-11/historical/tas/: EUR-11_historical_tas.sh
wget_scripts/EUR-11/rcp26/pr/: EUR-11_rcp26_pr.sh
wget_scripts/EUR-11/rcp26/tas/: EUR-11_rcp26_tas.sh
wget_scripts/EUR-11/rcp85/pr/: EUR-11_rcp85_pr.sh
wget_scripts/EUR-11/rcp85/tas/: EUR-11_rcp85_tas.sh
wget_scripts/historical/pr/: wget-20241228215607.sh
wget_scripts/historical/tas/: wget-20241228230930.sh
wget_scripts/ssp585/tas/: wget-20241222212252.sh
(+25 files in other folders)
